--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>colab-ros-tf</name>
+  <name>colab_ros_tf</name>
   <version>0.0.0</version>
-  <description>The colab-ros-tf package</description>
+  <description>The colab_ros_tf package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/colab-ros-tf</url> -->
+  <!-- <url type="website">http://wiki.ros.org/colab_ros_tf</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
